Consolidated all the styles into one file. Added clickable links to the projects.

--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,4 @@
-
-
-welcome_text = """
-I am a repurposed math PhD, working in Algorithms and software leadership in the Bay Area. In the past I worked mainly in problems related to Fluid dynamics and Free boundary problems. My thesis was on the local and global well-posedness of the Two-Phase Stefan problem, which is a model for the interaction of two phases of a fluid, like ice and water, and the evolution of the interface that separates the two.
-
-I am interested in anything related to mathematics, from numerical simulations of differential equations, to optimization, and lately Data Science. Any problem that can be modeled into a mathematical question, and that requires deep thinking and the development of new mathematical tools sparks my interest.
-"""
-
-quick_bio = """
-Ph.D. Mathematics (2016) University of California Davis. Advisor: Steve Shkoller. Thesis: Local and Global well-posedness of the Two-phase Stefan problem.
-
-BS Physics (2008) Physics department, U. Chile.
-
-BS Mathematics (2008) Mathematics department, U. Chile.
-
-Mathematical Civil Engineering (2009) Mathematics department, U. Chile. Advisor: Juan Diego Davila. Undergraduate Thesis: Singular Limits in Liouville type equations with exponential Neumann data.
-
-
-Publications
-M. Hadzic, G. Navarro, S. Shkoller, Local well-posedness and Global stability of the Two-phase Stefan problem. SIAM J. Math. Anal., 49(6), 4942–5006. (65 pages) SIAM, Arxiv
-R. Granero-Belinchon, G. Navarro, A. Ortega, On the effect of boundaries in the two-phase porous flow. Nonlinearity 28 (2015) 435-461. IOPScience, Arxiv
-"""
-
-style_text = """
-              :root {
+:root {
     --primary-color: #2c3e50;
     --secondary-color: #34495e;
     --accent-color: #3498db;
@@ -170,6 +146,12 @@ h2 {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
+.project-link {
+    display: block; /* Make <a> behave like a block element */
+    text-decoration: none;
+    color: black;
+}
+
 .project:hover {
     transform: translateY(-5px);
     box-shadow: 0 4px 8px rgba(0,0,0,0.15);
@@ -275,5 +257,3 @@ footer {
         margin-right: 0;
     }
 }
-
-"""
